--- a/provider-gcp/examples/redis/instance.yaml
+++ b/provider-gcp/examples/redis/instance.yaml
@@ -12,4 +12,4 @@ spec:
     authEnabled: true
   writeConnectionSecretToRef:
     name: example-redis-connection-details
-    namespace: crossplane-system
+    namespace: upbound-system
