--- a/provider-gcp/examples/cloudplatform/servicenetworkingpeereddnsdomain.yaml
+++ b/provider-gcp/examples/cloudplatform/servicenetworkingpeereddnsdomain.yaml
@@ -1,21 +1,13 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceNetworkingPeeredDNSDomain
 metadata:
+  labels:
+    testing.upbound.io/example-name: example
+  annotations:
+    upjet.upbound.io/manual-intervention: "Requires a network in a consumer project"
   name: example
 spec:
   forProvider:
     dnsSuffix: example.com.
-    network: service-peered-network
+    network: consumer-network
     service: servicenetworking.googleapis.com
-
----
-
-apiVersion: compute.gcp.upbound.io/v1beta1
-kind: Network
-metadata:
-  labels:
-    testing.upbound.io/example-name: service-peered-network
-  name: service-peered-network
-spec:
-  forProvider:
-    autoCreateSubnetworks: false
