write secret to upbound-system
Signed-off-by: Steven Borrelli <steve@borrelli.org>

--- a/provider-gcp/examples/container/cluster.yaml
+++ b/provider-gcp/examples/container/cluster.yaml
@@ -9,4 +9,4 @@ spec:
     removeDefaultNodePool: false
   writeConnectionSecretToRef:
     name: example-gke-cluster-secret
-    namespace: crossplane-system
+    namespace: upbound-system
