--- a/provider-gcp/examples/storage/bucket.yaml
+++ b/provider-gcp/examples/storage/bucket.yaml
@@ -1,12 +1,30 @@
 apiVersion: storage.gcp.upbound.io/v1beta1
 kind: Bucket
 metadata:
-  name: example
+  name: bucket
+  labels:
+     testing.upbound.io/example-name: upbound-example-990150596479
   annotations:
-    # Note that this will be the actual bucket name, so it has to be globally
+    # Note that the external-name will be the actual bucket name, so it has to be globally
     #  unique/available.
-    crossplane.io/external-name: crossplane-example-bucket10
+    crossplane.io/external-name: upbound-example-990150596479
 spec:
   forProvider:
-    location: US
-    storageClass: MULTI_REGIONAL
+    cors:
+    - maxAgeSeconds: 3600
+      method:
+      - GET
+      - HEAD
+      - PUT
+      - POST
+      - DELETE
+      origin:
+      - http://image-store.com
+      responseHeader:
+      - '*'
+    forceDestroy: true
+    location: EU
+    uniformBucketLevelAccess: true
+    website:
+    - mainPageSuffix: index.html
+      notFoundPage: 404.html
