--- a/provider-gcp/examples/storage/bucketaccesscontrol.yaml
+++ b/provider-gcp/examples/storage/bucketaccesscontrol.yaml
@@ -1,10 +1,24 @@
 apiVersion: storage.gcp.upbound.io/v1beta1
 kind: BucketAccessControl
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: public_rule
+  name: public-rule
 spec:
   forProvider:
-    bucketRef:
-      name: example
+    bucketSelector:
+      matchLabels:
+        testing.upbound.io/example-name: access-control-example
     entity: allUsers
     role: READER
+---
+apiVersion: storage.gcp.upbound.io/v1beta1
+kind: Bucket
+metadata:
+  labels:
+    testing.upbound.io/example-name: access-control-example
+  name: access-control-example
+spec:
+  forProvider:
+    location: US
+
