--- a/provider-gcp/examples/cloudplatform/serviceaccount.yaml
+++ b/provider-gcp/examples/cloudplatform/serviceaccount.yaml
@@ -1,7 +1,9 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccount
 metadata:
+  labels:
+    testing.upbound.io/example-name: example_service_account
   name: example-service-account
 spec:
   forProvider:
-    displayName: Crossplane Example Service Account
+    displayName: Upbound Example Service Account
