--- a/provider-gcp/examples/cloudplatform/serviceaccountkey.yaml
+++ b/provider-gcp/examples/cloudplatform/serviceaccountkey.yaml
@@ -1,12 +1,27 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccountKey
 metadata:
+  labels:
+    testing.upbound.io/example-name: example_service_account_key
   name: example-service-account-key
 spec:
   forProvider:
-    serviceAccountIdRef:
-      name: example-service-account
     publicKeyType: TYPE_X509_PEM_FILE
+    serviceAccountIdSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example_service_account_key
   writeConnectionSecretToRef:
     name: example-service-account-key-secret
-    namespace: crossplane-system
+    namespace: upbound-system
+---
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
+kind: ServiceAccount
+metadata:
+  labels:
+    testing.upbound.io/example-name: example_service_account_key
+  name: example-service-account-key
+spec:
+  forProvider:
+    displayName: Used for example service account key testing
+
+
