update gcp monitoring examples
Signed-off-by: Steven Borrelli <steve@borrelli.org>

--- a/provider-gcp/examples/monitoring/alertpolicy.yaml
+++ b/provider-gcp/examples/monitoring/alertpolicy.yaml
@@ -1,7 +1,9 @@
 apiVersion: monitoring.gcp.upbound.io/v1beta1
 kind: AlertPolicy
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: example_alert_policy
+  name: example-alert-policy
 spec:
   forProvider:
     combiner: OR
