--- a/provider-gcp/examples/monitoring/uptimecheckconfig.yaml
+++ b/provider-gcp/examples/monitoring/uptimecheckconfig.yaml
@@ -1,21 +1,25 @@
 apiVersion: monitoring.gcp.upbound.io/v1beta1
 kind: UptimeCheckConfig
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: http_uptime_check
+  name: example-http-uptime-check
 spec:
   forProvider:
+    checkerType: STATIC_IP_CHECKERS
     contentMatchers:
-      - content: example
-    displayName: http-uptime-check
+    - content: example
+    displayName: example-http-uptime-check
     httpCheck:
-      - body: Zm9vJTI1M0RiYXI=
-        contentType: URL_ENCODED
-        path: /some-path
-        port: 8010
-        requestMethod: POST
+    - body: Zm9vJTI1M0RiYXI=
+      contentType: URL_ENCODED
+      path: some-path
+      port: 8010
+      requestMethod: POST
     monitoredResource:
-      - labels:
-          host: 192.168.1.1
-          project_id: my-project
-        type: uptime_url
+    - labels:
+        host: 192.168.1.1
+        project_id: official-provider-testing
+      type: uptime_url
     timeout: 60s
+
