--- a/provider-gcp/examples/sql/instance.yaml
+++ b/provider-gcp/examples/sql/instance.yaml
@@ -1,7 +1,10 @@
 apiVersion: sql.gcp.upbound.io/v1beta1
 kind: DatabaseInstance
 metadata:
-  name: example-instance
+  labels:
+    testing.upbound.io/example-name: example_instance
+  # ${Rand...} is not valid YAML and is used with automated testing
+  name: example-instance-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     region: "us-central1"
