--- a/provider-gcp/examples/sql/user.yaml
+++ b/provider-gcp/examples/sql/user.yaml
@@ -9,6 +9,8 @@ metadata:
 apiVersion: sql.gcp.upbound.io/v1beta1
 kind: User
 metadata:
+  labels:
+    testing.upbound.io/example-name: example_user
   name: example-user
 spec:
   forProvider:
@@ -16,5 +18,6 @@ spec:
       name: example-sql-user
       namespace: upbound-system
       key: password
-    instanceRef:
-      name: example-instance
+    instanceSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example_instance
