add gcp computer network examples
Signed-off-by: Steven Borrelli <steve@borrelli.org>

--- a/provider-gcp/examples/compute/address.yaml
+++ b/provider-gcp/examples/compute/address.yaml
@@ -2,8 +2,8 @@ apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Address
 metadata:
   labels:
-    testing.upbound.io/example-name: ip-address
-  name: ip-address
+    testing.upbound.io/example-name: example_ip_address_with_network
+  name: example-ip-address-with-network-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     address: 10.0.42.42
@@ -11,29 +11,30 @@ spec:
     region: us-central1
     subnetworkSelector:
       matchLabels:
-        testing.upbound.io/example-name: ip-address-subnet
+        testing.upbound.io/example-name: example_ip_address_subnet
 ---
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Network
 metadata:
   labels:
-    testing.upbound.io/example-name: ip-address-net
-  name: ip-address-net
+    testing.upbound.io/example-name: example_ip_address_network
+  name: example-ip-address-network-${Rand.RFC1123Subdomain}
 spec:
-  forProvider: {}
+  forProvider:
+    autoCreateSubnets: false
 ---
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Subnetwork
 metadata:
   labels:
-    testing.upbound.io/example-name: ip-address-subnet
-  name: ip-address-subnet
+    testing.upbound.io/example-name: example_ip_address_subnet
+  name: example-ip-address-subnet-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     ipCidrRange: 10.0.0.0/16
     networkSelector:
       matchLabels:
-        testing.upbound.io/example-name: ip-address-net
+        testing.upbound.io/example-name: example_ip_address_network
     region: us-central1
 
 
