--- a/provider-gcp/examples/compute/subnetwork.yaml
+++ b/provider-gcp/examples/compute/subnetwork.yaml
@@ -1,13 +1,26 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Subnetwork
 metadata:
-  name: example
+  labels:
+      testing.upbound.io/example-name: example_subnet
+  name: example-subnet-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     ipCidrRange: 10.2.0.0/16
-    networkRef:
-      name: example
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example_subnet_network
     region: us-central1
     secondaryIpRange:
     - ipCidrRange: 192.168.10.0/24
-      rangeName: tf-test-secondary-range-update1
+      rangeName: test-secondary-range-update1
+---
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: example_subnet_network
+  name: example-subnet-network-${Rand.RFC1123Subdomain}
+spec:
+  forProvider:
+     autoCreateSubnetworks: false
