--- a/provider-gcp/examples/compute/instance.yaml
+++ b/provider-gcp/examples/compute/instance.yaml
@@ -1,15 +1,50 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Instance
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: example_instance
+  name: example-instance-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
-    machineType: e2-medium
-    zone: us-central1-a
-    labels:
-      managed-by: crossplane
-    networkInterface:
-      - network: default
     bootDisk:
-      - initializeParams:
-          - image: debian-cloud/debian-11
+    - initializeParams:
+      - image: debian-cloud/debian-11
+    machineType: e2-medium
+    metadata:
+      foo: bar
+    metadataStartupScript: echo hi > /test.txt
+    networkInterface:
+    - accessConfig:
+      - {}
+      networkSelector:
+        matchLabels:
+          testing.upbound.io/example-name: example_instance_network
+    serviceAccount:
+    - emailSelector:
+        matchLabels:
+          testing.upbound.io/example-name: example_instance_sa
+      scopes:
+      - cloud-platform
+    tags: 
+    - foo
+    - bar
+    zone: us-central1-a
+---
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: example_instance_network
+  name: example-instance-network-${Rand.RFC1123Subdomain}
+spec:
+  forProvider: {}
+---
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
+kind: ServiceAccount
+metadata:
+  labels:
+    testing.upbound.io/example-name: example_instance_sa
+  name: example-instance-sa
+spec:
+  forProvider:
+    displayName: Example Instance Service Account
