--- a/provider-gcp/examples/cloudplatform/folder.yaml
+++ b/provider-gcp/examples/cloudplatform/folder.yaml
@@ -1,8 +1,13 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: Folder
 metadata:
-  name: example
+  annotations:
+    meta.upbound.io/example-id: cloudplatform/v1beta1/folder
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
+  labels:
+    testing.upbound.io/example-name: folder
+  name: folder
 spec:
   forProvider:
-    displayName: Department 1
+    displayName: Example
     parent: organizations/1234567
