--- a/provider-gcp/examples/cloudplatform/organizationiamauditconfig.yaml
+++ b/provider-gcp/examples/cloudplatform/organizationiamauditconfig.yaml
@@ -1,11 +1,12 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: OrganizationIAMAuditConfig
 metadata:
-  labels:
-    testing.upbound.io/example-name: example
   annotations:
-    upjet.upbound.io/manual-intervention: "Requires organization IAM permissions"
-  name: example
+    meta.upbound.io/example-id: cloudplatform/v1beta1/organizationiamauditconfig
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
+  labels:
+    testing.upbound.io/example-name: org-iam-audit
+  name: org-iam-audit
 spec:
   forProvider:
     orgId: "123456789"
