--- a/provider-gcp/examples/cloudplatform/organizationiamcustomrole.yaml
+++ b/provider-gcp/examples/cloudplatform/organizationiamcustomrole.yaml
@@ -1,11 +1,12 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: OrganizationIAMCustomRole
 metadata:
-  labels:
-    testing.upbound.io/example-name: example
   annotations:
-    upjet.upbound.io/manual-intervention: "Requires organization IAM permissions"
-  name: example
+    meta.upbound.io/example-id: cloudplatform/v1beta1/organizationiamcustomrole
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
+  labels:
+    testing.upbound.io/example-name: org-iam-custom-role
+  name: org-iam-custom-role
 spec:
   forProvider:
     description: A custom role
