--- a/provider-gcp/examples/cloudplatform/organizationiammember.yaml
+++ b/provider-gcp/examples/cloudplatform/organizationiammember.yaml
@@ -1,11 +1,12 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: OrganizationIAMMember
 metadata:
-  labels:
-    testing.upbound.io/example-name: example
   annotations:
-    upjet.upbound.io/manual-intervention: "Requires organization IAM permissions"
-  name: example
+    meta.upbound.io/example-id: cloudplatform/v1beta1/organizationiammember
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
+  labels:
+    testing.upbound.io/example-name: org-iam-member
+  name: org-iam-member
 spec:
   forProvider:
     orgId: "123456789"
