--- a/provider-gcp/examples/cloudplatform/project.yaml
+++ b/provider-gcp/examples/cloudplatform/project.yaml
@@ -1,7 +1,12 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: Project
 metadata:
-  name: crossplane-example-1289
+  annotations:
+    meta.upbound.io/example-id: cloudplatform/v1beta1/project
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
+  labels:
+    testing.upbound.io/example-name: project
+  name: project
 spec:
   forProvider:
-    projectId:  crossplane-gcp-example-project
+    projectId: project
