--- a/provider-gcp/examples/cloudplatform/projectdefaultserviceaccounts.yaml
+++ b/provider-gcp/examples/cloudplatform/projectdefaultserviceaccounts.yaml
@@ -1,14 +1,15 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectDefaultServiceAccounts
 metadata:
-  name: example
-  labels:
-    testing.upbound.io/example-name: example
   annotations:
+    meta.upbound.io/example-id: cloudplatform/v1beta1/projectdefaultserviceaccounts
     upjet.upbound.io/manual-intervention: "This is a project level resource and could be distructive"
+  labels:
+    testing.upbound.io/example-name: project-default-sa
+  name: project-default-sa
 spec:
   forProvider:
     action: DEPRIVILEGE
     projectSelector:
       matchLabels:
-        testing.upbound.io/example-name: example
+        testing.upbound.io/example-name: project-default-sa
