--- a/provider-gcp/examples/cloudplatform/projectiamauditconfig.yaml
+++ b/provider-gcp/examples/cloudplatform/projectiamauditconfig.yaml
@@ -1,15 +1,16 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectIAMAuditConfig
 metadata:
-  name: example
   annotations:
-    upjet.upbound.io/manual-intervention: "Members are dependent on the project and leak sensitive information"
+    meta.upbound.io/example-id: cloudplatform/v1beta1/organizationiamauditconfig
+  labels:
+    testing.upbound.io/example-name: project-iam-audit
+  name: project-iam-audit
 spec:
   forProvider:
-    service: allServices
+    service: ml.googleapis.com
     auditLogConfig:
       - logType: DATA_READ
         exemptedMembers:
-          - "user:joebloggs@hashicorp.com"
-    projectRef:
-      name: example
+          - "${data.google_iam_member.member}"
+    project: ${data.cloudplatform_project.projectId}
