--- a/provider-gcp/examples/cloudplatform/projectiammember.yaml
+++ b/provider-gcp/examples/cloudplatform/projectiammember.yaml
@@ -1,12 +1,13 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectIAMMember
 metadata:
-  name: example
   annotations:
-    upjet.upbound.io/manual-intervention: "Members are dependent on the project and leak sensitive information"
+    meta.upbound.io/example-id: cloudplatform/v1beta1/projectiammember
+  labels:
+    testing.upbound.io/example-name: project-iam-member
+  name: project-iam-member
 spec:
   forProvider:
-    member: "user:jane@example.com"
+    member: "${data.google_iam_member.member}"
     role: "roles/viewer"
-    projectRef:
-      name: example
+    project: ${data.cloudplatform_project.projectId}
