--- a/provider-gcp/examples/cloudplatform/projectservice.yaml
+++ b/provider-gcp/examples/cloudplatform/projectservice.yaml
@@ -1,15 +1,13 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectService
 metadata:
-  name: example
-  labels:
-    testing.upbound.io/example-name: example
   annotations:
-    upjet.upbound.io/manual-intervention: "Project level resource and is environment specific"
+    meta.upbound.io/example-id: cloudplatform/v1beta1/projectservice
+  labels:
+    testing.upbound.io/example-name: project-service
+  name: project-service
 spec:
   forProvider:
     disableDependentServices: false
-    projectSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
+    project: ${data.cloudplatform_project.projectId}
     service: clouddeploy.googleapis.com
