--- a/provider-gcp/examples/cloudplatform/projectusageexportbucket.yaml
+++ b/provider-gcp/examples/cloudplatform/projectusageexportbucket.yaml
@@ -1,29 +1,29 @@
-apiVersion: storage.gcp.upbound.io/v1beta1
-kind: Bucket
-metadata:
-  name: example-usage-tracking-bucket
-  labels:
-    testing.upbound.io/example-name: example
-spec:
-  forProvider:
-    location: US
-    storageClass: MULTI_REGIONAL
-
----
-
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectUsageExportBucket
 metadata:
-  name: example
-  labels:
-    testing.upbound.io/example-name: example
   annotations:
-    upjet.upbound.io/manual-intervention: "Project level resource and is environment specific"
+    meta.upbound.io/example-id: cloudplatform/v1beta1/projectusageexportbucket
+  labels:
+    testing.upbound.io/example-name: project-usage-tracking-bucket
+  name: project-usage-tracking-bucket
 spec:
   forProvider:
     bucketNameSelector:
       matchLabels:
-        testing.upbound.io/example-name: example
-    projectSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
+        testing.upbound.io/example-name: project-usage-tracking-bucket
+    project: ${data.cloudplatform_project.projectId}
+
+---
+
+apiVersion: storage.gcp.upbound.io/v1beta1
+kind: Bucket
+metadata:
+  annotations:
+    meta.upbound.io/example-id: cloudplatform/v1beta1/projectusageexportbucket
+  labels:
+    testing.upbound.io/example-name: project-usage-tracking-bucket
+  name: project-usage-tracking-bucket
+spec:
+  forProvider:
+    location: US
+    storageClass: MULTI_REGIONAL
