--- a/provider-gcp/examples/cloudplatform/serviceaccount.yaml
+++ b/provider-gcp/examples/cloudplatform/serviceaccount.yaml
@@ -1,6 +1,8 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccount
 metadata:
+  annotations:
+    meta.upbound.io/example-id: cloudplatform/v1beta1/serviceaccount
   labels:
     testing.upbound.io/example-name: example_service_account
   name: example-service-account
