--- a/provider-gcp/examples/cloudplatform/serviceaccountiammember.yaml
+++ b/provider-gcp/examples/cloudplatform/serviceaccountiammember.yaml
@@ -1,12 +1,29 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccountIAMMember
 metadata:
-  name: example
   annotations:
-    upjet.upbound.io/manual-intervention: "Members are dependent on the project and leak sensitive information"
+    meta.upbound.io/example-id: cloudplatform/v1beta1/serviceaccountiammember
+  labels:
+    testing.upbound.io/example-name: service-account-iam-member
+  name: service-account-iam-member
 spec:
   forProvider:
-    member: "user:jane@example.com"
+    member: "${data.google_iam_member.member}"
     role: "roles/viewer"
-    serviceAccountIdRef:
-      name: example
+    serviceAccountIdSelector:
+      matchLabels:
+        testing.upbound.io/example-name: service-account-iam-member
+
+---
+
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
+kind: ServiceAccount
+metadata:
+  annotations:
+    meta.upbound.io/example-id: cloudplatform/v1beta1/serviceaccountiammember
+  labels:
+    testing.upbound.io/example-name: service-account-iam-member
+  name: service-account-iam-member
+spec:
+  forProvider:
+    displayName: Upbound Example Service Account
