--- a/provider-gcp/examples/cloudplatform/serviceaccountkey.yaml
+++ b/provider-gcp/examples/cloudplatform/serviceaccountkey.yaml
@@ -1,27 +1,28 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccountKey
 metadata:
+  annotations:
+    meta.upbound.io/example-id: cloudplatform/v1beta1/serviceaccountkey
   labels:
-    testing.upbound.io/example-name: example_service_account_key
+    testing.upbound.io/example-name: example-service-account-key
   name: example-service-account-key
 spec:
   forProvider:
     publicKeyType: TYPE_X509_PEM_FILE
     serviceAccountIdSelector:
       matchLabels:
-        testing.upbound.io/example-name: example_service_account_key
-  writeConnectionSecretToRef:
-    name: example-service-account-key-secret
-    namespace: upbound-system
+        testing.upbound.io/example-name: example-service-account-key
+
 ---
+
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccount
 metadata:
+  annotations:
+    meta.upbound.io/example-id: cloudplatform/v1beta1/serviceaccountkey
   labels:
-    testing.upbound.io/example-name: example_service_account_key
+    testing.upbound.io/example-name: example-service-account-key
   name: example-service-account-key
 spec:
   forProvider:
     displayName: Used for example service account key testing
-
-
