--- a/provider-gcp/examples/cloudtasks/queue.yaml
+++ b/provider-gcp/examples/cloudtasks/queue.yaml
@@ -1,10 +1,12 @@
 apiVersion: cloudtasks.gcp.upbound.io/v1beta1
 kind: Queue
 metadata:
-metadata:
   annotations:
-    upjet.upbound.io/manual-intervention: "Queue name cannot be re-used within a reasonable amount of time"
-  name: example
+    meta.upbound.io/example-id: cloudtasks/v1beta1/queue
+  labels:
+    testing.upbound.io/example-name: queue
+  # If you delete a queue from the Google Cloud console, you must wait 7 days before recreating it with the same name.
+  name: queue-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     location: us-central1
