--- a/provider-gcp/examples/dns/managedzone.yaml
+++ b/provider-gcp/examples/dns/managedzone.yaml
@@ -1,11 +1,37 @@
 apiVersion: dns.gcp.upbound.io/v1beta1
 kind: ManagedZone
 metadata:
-  name: example
+  annotations:
+    meta.upbound.io/example-id: dns/v1beta1/managedzone
+  labels:
+    testing.upbound.io/example-name: managed-zone
+  name: managed-zone
 spec:
   forProvider:
     description: Example DNS zone
     dnsName: example-281496.com.
     labels:
-      foo: bar
+      environment: dev
     visibility: private
+
+---
+
+apiVersion: dns.gcp.upbound.io/v1beta1
+kind: RecordSet
+metadata:
+  annotations:
+    meta.upbound.io/example-id: dns/v1beta1/managedzone
+  labels:
+    testing.upbound.io/example-name: managed-zone
+  name: managed-zone
+spec:
+  forProvider:
+    # Note the trailing period
+    name: test.example-281496.com.
+    managedZoneSelector:
+      matchLabels:
+        testing.upbound.io/example-name: managed-zone
+    rrdatas:
+    - 8.8.8.8
+    ttl: 300
+    type: A
