--- a/provider-gcp/examples/iap/webbackendserviceiammember.yaml
+++ b/provider-gcp/examples/iap/webbackendserviceiammember.yaml
@@ -1,14 +1,14 @@
 apiVersion: iap.gcp.upbound.io/v1beta1
 kind: WebBackendServiceIAMMember
 metadata:
+  annotations:
+    meta.upbound.io/example-id: iap/v1beta1/webbackendserviceiammember
   labels:
     testing.upbound.io/example-name: web-backend-service-iam
-  annotations:
-    upjet.upbound.io/manual-intervention: "Members are dependent on the project and leak sensitive information"
   name: web-backend-service-iam
 spec:
   forProvider:
-    member: "user:jane@example.com"
+    member: "${data.google_iam_member.member}"
     role: "roles/viewer"
     webBackendServiceSelector:
       matchLabels:
@@ -19,10 +19,10 @@ spec:
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: HealthCheck
 metadata:
+  annotations:
+    meta.upbound.io/example-id: iap/v1beta1/webbackendserviceiammember
   labels:
     testing.upbound.io/example-name: web-backend-service-iam
-  annotations:
-    upjet.upbound.io/manual-intervention: "Members are dependent on the project and leak sensitive information"
   name: web-backend-service-iam 
 spec:
   forProvider:
@@ -36,15 +36,13 @@ spec:
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: BackendService
 metadata:
+  annotations:
+    meta.upbound.io/example-id: iap/v1beta1/webbackendserviceiammember
   labels:
     testing.upbound.io/example-name: web-backend-service-iam  
-  annotations:
-    upjet.upbound.io/manual-intervention: "Members are dependent on the project and leak sensitive information"
   name: web-backend-service-iam
 spec:
   forProvider:
-    # TODO wait for #599 to be merged
-    # healthChecksRefs:
-    # - name: web-backend-service-iam-iam
-    healthChecks:
-    - https://www.googleapis.com/compute/v1/projects/crossplane-playground/global/healthChecks/web-backend-service-iam
+    healthChecksSelector:
+      matchLabels:
+        testing.upbound.io/example-name: web-backend-service-iam
