--- a/provider-gcp/examples/iap/webtypeappengineiammember.yaml
+++ b/provider-gcp/examples/iap/webtypeappengineiammember.yaml
@@ -1,13 +1,13 @@
 apiVersion: iap.gcp.upbound.io/v1beta1
 kind: WebTypeAppEngineIAMMember
 metadata:
+  annotations:
+    meta.upbound.io/example-id: iap/v1beta1/webtypeappengineiammember
   labels:
     testing.upbound.io/example-name: web-type-app-engine-iam
-  annotations:
-    upjet.upbound.io/manual-intervention: "App Engine ID and member are dependent on the project and leak sensitive information"
   name: web-type-app-engine-iam
 spec:
   forProvider:
-    appId: "project-id"
-    member: "user:jane@example.com"
+    appId: ${data.cloudplatform_project.projectId}
+    member: "${data.google_iam_member.member}"
     role: "roles/iap.httpsResourceAccessor"
