--- a/provider-gcp/examples/iap/webtypecomputeiammember.yaml
+++ b/provider-gcp/examples/iap/webtypecomputeiammember.yaml
@@ -1,12 +1,12 @@
 apiVersion: iap.gcp.upbound.io/v1beta1
 kind: WebTypeComputeIAMMember
 metadata:
+  annotations:
+    meta.upbound.io/example-id: iap/v1beta1/webtypecomputeiammember
   labels:
     testing.upbound.io/example-name: web-type-compute-iam
-  annotations:
-    upjet.upbound.io/manual-intervention: "Members are dependent on the project and leak sensitive information"
   name: web-type-compute-iam
 spec:
   forProvider:
-    member: "user:jane@example.com"
+    member: "${data.google_iam_member.member}"
     role: "roles/iap.httpsResourceAccessor"
