--- a/provider-gcp/examples/identityplatform/inboundsamlconfig.yaml
+++ b/provider-gcp/examples/identityplatform/inboundsamlconfig.yaml
@@ -1,6 +1,8 @@
 apiVersion: identityplatform.gcp.upbound.io/v1beta1
 kind: InboundSAMLConfig
 metadata:
+  annotations:
+    meta.upbound.io/example-id: identityplatform/v1beta1/inboundsamlconfig
   labels:
     testing.upbound.io/example-name: inbound-saml-config
   name: inbound-saml-config
@@ -28,5 +30,9 @@ data:
   rsa_cert.pem: dXBib3VuZA==
 kind: Secret
 metadata:
+  annotations:
+    meta.upbound.io/example-id: identityplatform/v1beta1/inboundsamlconfig
+  labels:
+    testing.upbound.io/example-name: inbound-saml-config
   name: inbound-saml-config
   namespace: upbound-system
