--- a/provider-gcp/examples/identityplatform/tenantdefaultsupportedidpconfig.yaml
+++ b/provider-gcp/examples/identityplatform/tenantdefaultsupportedidpconfig.yaml
@@ -1,6 +1,8 @@
 apiVersion: identityplatform.gcp.upbound.io/v1beta1
 kind: TenantDefaultSupportedIdPConfig
 metadata:
+  annotations:
+    meta.upbound.io/example-id: identityplatform/v1beta1/tenantdefaultsupportedidpconfig
   labels:
     testing.upbound.io/example-name: tenant-default-supported-idp-config
   name: tenant-default-supported-idp-config
@@ -27,6 +29,10 @@ data:
   clientSecret: MTIzNDU=
 kind: Secret
 metadata:
+  annotations:
+    meta.upbound.io/example-id: identityplatform/v1beta1/tenantdefaultsupportedidpconfig
+  labels:
+    testing.upbound.io/example-name: tenant-default-supported-idp-config
   name: tenant-default-supported-idp-config
   namespace: upbound-system
 
@@ -35,6 +41,8 @@ metadata:
 apiVersion: identityplatform.gcp.upbound.io/v1beta1
 kind: Tenant
 metadata:
+  annotations:
+    meta.upbound.io/example-id: identityplatform/v1beta1/tenantdefaultsupportedidpconfig
   labels:
     testing.upbound.io/example-name: tenant-default-supported-idp-config
   name: tenant-default-supported-idp-config
