--- a/provider-gcp/examples/identityplatform/tenantoauthidpconfig.yaml
+++ b/provider-gcp/examples/identityplatform/tenantoauthidpconfig.yaml
@@ -1,6 +1,8 @@
 apiVersion: identityplatform.gcp.upbound.io/v1beta1
 kind: TenantOAuthIdPConfig
 metadata:
+  annotations:
+    meta.upbound.io/example-id: identityplatform/v1beta1/tenantoauthidpconfig
   labels:
     testing.upbound.io/example-name: tenant-oauth-idp-config
   name: tenant-oauth-idp-config
@@ -30,6 +32,10 @@ data:
   clientSecret: MTIzNDU=
 kind: Secret
 metadata:
+  annotations:
+    meta.upbound.io/example-id: identityplatform/v1beta1/tenantoauthidpconfig
+  labels:
+    testing.upbound.io/example-name: tenant-oauth-idp-config
   name: tenant-oauth-idp-config
   namespace: upbound-system
 
@@ -38,6 +44,8 @@ metadata:
 apiVersion: identityplatform.gcp.upbound.io/v1beta1
 kind: Tenant
 metadata:
+  annotations:
+    meta.upbound.io/example-id: identityplatform/v1beta1/tenantoauthidpconfig
   labels:
     testing.upbound.io/example-name: tenant-oauth-idp-config
   name: tenant-oauth-idp-config
