gcp: Configure kms

--- a/provider-gcp/examples-generated/kms/secretciphertext.yaml
+++ b/provider-gcp/examples-generated/kms/secretciphertext.yaml
@@ -11,10 +11,7 @@ spec:
     cryptoKeySelector:
       matchLabels:
         testing.upbound.io/example-name: cryptokey
-    plaintextSecretRef:
-      key: example-key
-      name: example-secret
-      namespace: upbound-system
+    plaintext: my-secret-password
 
 ---
 
