--- a/provider-gcp/package/crds/kms.gcp.upbound.io_secretciphertexts.yaml
+++ b/provider-gcp/package/crds/kms.gcp.upbound.io_secretciphertexts.yaml
@@ -164,27 +164,13 @@ spec:
                             type: string
                         type: object
                     type: object
-                  plaintextSecretRef:
+                  plaintext:
                     description: 'The plaintext to be encrypted. Note: This property
                       is sensitive and will not be displayed in the plan. The plaintext
                       to be encrypted.'
-                    properties:
-                      key:
-                        description: The key to select.
-                        type: string
-                      name:
-                        description: Name of the secret.
-                        type: string
-                      namespace:
-                        description: Namespace of the secret.
-                        type: string
-                    required:
-                    - key
-                    - name
-                    - namespace
-                    type: object
+                    type: string
                 required:
-                - plaintextSecretRef
+                - plaintext
                 type: object
               providerConfigRef:
                 default:
