--- a/provider-gcp/examples/kms/secretciphertext.yaml
+++ b/provider-gcp/examples/kms/secretciphertext.yaml
@@ -1,44 +1,48 @@
 apiVersion: kms.gcp.upbound.io/v1beta1
 kind: SecretCiphertext
 metadata:
+  annotations:
+    meta.upbound.io/example-id: kms/v1beta1/secretciphertext
   labels:
-    testing.upbound.io/example-name: my_password
-  name: my-password
+    testing.upbound.io/example-name: secret-ciphertext
+  name: secret-ciphertext-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     cryptoKeySelector:
       matchLabels:
-        testing.upbound.io/example-name: cryptokey1
-    plaintextSecretRef:
-      key: example-key
-      name: example-secret
-      namespace: upbound-system
+        testing.upbound.io/example-name: secret-ciphertext
+    plaintext: "Upbound!"
 
 ---
 
+# By default, keys in Cloud KMS spend 24 hours in the Scheduled for destruction (soft deleted) state before the key material is logically deleted from the system
 apiVersion: kms.gcp.upbound.io/v1beta1
 kind: CryptoKey
 metadata:
+  annotations:
+    meta.upbound.io/example-id: kms/v1beta1/secretciphertext
   labels:
-    testing.upbound.io/example-name: cryptokey1
-  name: cryptokey1
+    testing.upbound.io/example-name: secret-ciphertext
+  name: secret-ciphertext-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     keyRingSelector:
       matchLabels:
-        testing.upbound.io/example-name: keyring
+        testing.upbound.io/example-name: secret-ciphertext
     rotationPeriod: 100000s
+    # The minimum duration is 24 hours for all keys, except for import-only keys which have a minimum duration of 0
+    destroyScheduledDuration: 86400s
 
 ---
 
 apiVersion: kms.gcp.upbound.io/v1beta1
 kind: KeyRing
 metadata:
+  annotations:
+    meta.upbound.io/example-id: kms/v1beta1/secretciphertext
   labels:
-    testing.upbound.io/example-name: keyring
-  name: keyring
+    testing.upbound.io/example-name: secret-ciphertext
+  name: secret-ciphertext-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     location: global
-
-
