--- a/provider-gcp/examples/pubsub/litesubscription.yaml
+++ b/provider-gcp/examples/pubsub/litesubscription.yaml
@@ -1,10 +1,37 @@
 apiVersion: pubsub.gcp.upbound.io/v1beta1
 kind: LiteSubscription
 metadata:
-  name: example
+  annotations:
+    meta.upbound.io/example-id: pubsub/v1beta1/litesubscription
+  labels:
+    testing.upbound.io/example-name: lite-subscription
+  name: lite-subscription
 spec:
   forProvider:
     zone: us-central1-a
     deliveryConfig:
     - deliveryRequirement: DELIVER_AFTER_STORED
-    topic: example
+    topicSelector:
+      matchLabels:
+        testing.upbound.io/example-name: lite-subscription
+
+---
+
+apiVersion: pubsub.gcp.upbound.io/v1beta1
+kind: LiteTopic
+metadata:
+  annotations:
+    meta.upbound.io/example-id: pubsub/v1beta1/litesubscription
+  labels:
+    testing.upbound.io/example-name: lite-subscription
+  name: lite-subscription
+spec:
+  forProvider:
+    zone: us-central1-a
+    partitionConfig:
+    - capacity:
+      - publishMibPerSec: 4
+        subscribeMibPerSec: 8
+      count: 1
+    retentionConfig:
+    - perPartitionBytes: "32212254720"
