--- a/provider-gcp/examples/pubsub/subscription.yaml
+++ b/provider-gcp/examples/pubsub/subscription.yaml
@@ -1,8 +1,26 @@
 apiVersion: pubsub.gcp.upbound.io/v1beta1
 kind: Subscription
 metadata:
-  name: example
+  annotations:
+    meta.upbound.io/example-id: pubsub/v1beta1/subscription
+  labels:
+    testing.upbound.io/example-name: subscription
+  name: subscription
 spec:
   forProvider:
-    topic: example
+    topicSelector:
+      matchLabels:
+        testing.upbound.io/example-name: subscription
 
+---
+
+apiVersion: pubsub.gcp.upbound.io/v1beta1
+kind: Topic
+metadata:
+  annotations:
+    meta.upbound.io/example-id: pubsub/v1beta1/subscription
+  labels:
+    testing.upbound.io/example-name: subscription
+  name: subscription
+spec:
+  forProvider: {}
