--- a/provider-gcp/examples/pubsub/topic.yaml
+++ b/provider-gcp/examples/pubsub/topic.yaml
@@ -1,6 +1,10 @@
 apiVersion: pubsub.gcp.upbound.io/v1beta1
 kind: Topic
 metadata:
-  name: example
+  annotations:
+    meta.upbound.io/example-id: pubsub/v1beta1/topic
+  labels:
+    testing.upbound.io/example-name: topic
+  name: topic
 spec:
   forProvider: {}
