--- a/provider-gcp/examples/pubsub/topiciammember.yaml
+++ b/provider-gcp/examples/pubsub/topiciammember.yaml
@@ -1,9 +1,28 @@
 apiVersion: pubsub.gcp.upbound.io/v1beta1
 kind: TopicIAMMember
 metadata:
-  name: example
+  annotations:
+    meta.upbound.io/example-id: pubsub/v1beta1/topiciammember
+  labels:
+    testing.upbound.io/example-name: topic-iam-member
+  name: topic-iam-member
 spec:
   forProvider:
-    member: "user:jane@example.com"
-    role: "roles/viewer"
-    topic: "example"
+    member: "${data.google_iam_member.member}"
+    role: "roles/editor"
+    topicSelector:
+      matchLabels:
+        testing.upbound.io/example-name: topic-iam-member
+
+---
+
+apiVersion: pubsub.gcp.upbound.io/v1beta1
+kind: Topic
+metadata:
+  annotations:
+    meta.upbound.io/example-id: pubsub/v1beta1/topiciammember
+  labels:
+    testing.upbound.io/example-name: topic-iam-member
+  name: topic-iam-member
+spec:
+  forProvider: {}
