--- a/provider-gcp/examples/pubsub/litereservation.yaml
+++ b/provider-gcp/examples/pubsub/litereservation.yaml
@@ -5,7 +5,7 @@ metadata:
     meta.upbound.io/example-id: pubsub/v1beta1/litereservation
   labels:
     testing.upbound.io/example-name: lite-reservation
-  name: lite-reservation
+  name: lite-reservation-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     region: us-central1
