--- a/provider-gcp/examples/pubsub/litetopic.yaml
+++ b/provider-gcp/examples/pubsub/litetopic.yaml
@@ -5,7 +5,7 @@ metadata:
     meta.upbound.io/example-id: pubsub/v1beta1/litetopic
   labels:
     testing.upbound.io/example-name: lite-topic
-  name: lite-topic
+  name: lite-topic-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     zone: us-central1-a
@@ -26,7 +26,7 @@ metadata:
     meta.upbound.io/example-id: pubsub/v1beta1/litetopic
   labels:
     testing.upbound.io/example-name: lite-topic-reservation
-  name: lite-topic-reservation
+  name: lite-topic-reservation-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     zone: us-central1-a
@@ -48,7 +48,7 @@ metadata:
     meta.upbound.io/example-id: pubsub/v1beta1/litetopic
   labels:
     testing.upbound.io/example-name: lite-topic-reservation
-  name: lite-topic-reservation
+  name: lite-topic-reservation-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     region: us-central1
