--- a/provider-gcp/package/crds/secretmanager.gcp.upbound.io_secretiammembers.yaml
+++ b/provider-gcp/package/crds/secretmanager.gcp.upbound.io_secretiammembers.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
-  name: secretversions.secretmanager.gcp.upbound.io
+  name: secretiammembers.secretmanager.gcp.upbound.io
 spec:
   group: secretmanager.gcp.upbound.io
   names:
@@ -13,10 +13,10 @@ spec:
     - crossplane
     - managed
     - gcp
-    kind: SecretVersion
-    listKind: SecretVersionList
-    plural: secretversions
-    singular: secretversion
+    kind: SecretIAMMember
+    listKind: SecretIAMMemberList
+    plural: secretiammembers
+    singular: secretiammember
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -35,8 +35,8 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: SecretVersion is the Schema for the SecretVersions API. A secret
-          version resource.
+        description: SecretIAMMember is the Schema for the SecretIAMMembers API. <no
+          value>
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -51,7 +51,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: SecretVersionSpec defines the desired state of SecretVersion
+            description: SecretIAMMemberSpec defines the desired state of SecretIAMMember
             properties:
               deletionPolicy:
                 default: Delete
@@ -64,36 +64,30 @@ spec:
                 type: string
               forProvider:
                 properties:
-                  enabled:
-                    description: The current state of the SecretVersion. The current
-                      state of the SecretVersion.
-                    type: boolean
-                  secret:
-                    description: Secret Manager secret resource Secret Manager secret
-                      resource
+                  condition:
+                    items:
+                      properties:
+                        description:
+                          type: string
+                        expression:
+                          type: string
+                        title:
+                          type: string
+                      required:
+                      - expression
+                      - title
+                      type: object
+                    type: array
+                  member:
                     type: string
-                  secretDataSecretRef:
-                    description: 'The secret data. Must be no larger than 64KiB. Note:
-                      This property is sensitive and will not be displayed in the
-                      plan. The secret data. Must be no larger than 64KiB.'
-                    properties:
-                      key:
-                        description: The key to select.
-                        type: string
-                      name:
-                        description: Name of the secret.
-                        type: string
-                      namespace:
-                        description: Namespace of the secret.
-                        type: string
-                    required:
-                    - key
-                    - name
-                    - namespace
-                    type: object
-                  secretRef:
-                    description: Reference to a Secret in secretmanager to populate
-                      secret.
+                  project:
+                    type: string
+                  role:
+                    type: string
+                  secretId:
+                    type: string
+                  secretIdRef:
+                    description: Reference to a Secret to populate secretId.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -126,9 +120,8 @@ spec:
                     required:
                     - name
                     type: object
-                  secretSelector:
-                    description: Selector for a Secret in secretmanager to populate
-                      secret.
+                  secretIdSelector:
+                    description: Selector for a Secret to populate secretId.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
@@ -167,7 +160,8 @@ spec:
                         type: object
                     type: object
                 required:
-                - secretDataSecretRef
+                - member
+                - role
                 type: object
               providerConfigRef:
                 default:
@@ -341,26 +335,13 @@ spec:
             - forProvider
             type: object
           status:
-            description: SecretVersionStatus defines the observed state of SecretVersion.
+            description: SecretIAMMemberStatus defines the observed state of SecretIAMMember.
             properties:
               atProvider:
                 properties:
-                  createTime:
-                    description: The time at which the Secret was created. The time
-                      at which the Secret was created.
-                    type: string
-                  destroyTime:
-                    description: The time at which the Secret was destroyed. Only
-                      present if state is DESTROYED. The time at which the Secret
-                      was destroyed. Only present if state is DESTROYED.
+                  etag:
                     type: string
                   id:
-                    description: an identifier for the resource with format {{name}}
-                    type: string
-                  name:
-                    description: 'The resource name of the SecretVersion. Format:
-                      projects/{{project}}/secrets/{{secret_id}}/versions/{{version}}
-                      The resource name of the SecretVersion. Format: ''projects/{{project}}/secrets/{{secret_id}}/versions/{{version}}'''
                     type: string
                 type: object
               conditions:
