--- a/provider-gcp/examples/secretmanager/secret.yaml
+++ b/provider-gcp/examples/secretmanager/secret.yaml
@@ -1,11 +1,15 @@
 apiVersion: secretmanager.gcp.upbound.io/v1beta1
 kind: Secret
 metadata:
-  name: example
+  annotations:
+    meta.upbound.io/example-id: secretmanager/v1beta1/secret
+  labels:
+    testing.upbound.io/example-name: secret
+  name: secret
 spec:
   forProvider:
     labels:
-      label: my-label
+      environment: dev
     replication:
     - userManaged:
       - replicas:
