--- a/provider-gcp/examples/servicenetworking/connection.yaml
+++ b/provider-gcp/examples/servicenetworking/connection.yaml
@@ -1,20 +1,31 @@
-apiVersion: compute.gcp.upbound.io/v1beta1
-kind: Network
+apiVersion: servicenetworking.gcp.upbound.io/v1beta1
+kind: Connection
 metadata:
+  annotations:
+    meta.upbound.io/example-id: servicenetworking/v1beta1/connection
   labels:
-    testing.upbound.io/example-name: example
-  name: example-servicenetworking
+    testing.upbound.io/example-name: service-connection
+  name: service-connection
 spec:
-  forProvider: {}
+  forProvider:
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: service-connection
+    reservedPeeringRangesSelector:
+      matchLabels:
+        testing.upbound.io/example-name: service-connection
+    service: servicenetworking.googleapis.com
 
 ---
 
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: GlobalAddress
 metadata:
+  annotations:
+    meta.upbound.io/example-id: servicenetworking/v1beta1/connection
   labels:
-    testing.upbound.io/example-name: example
-  name: example-servicenetworking
+    testing.upbound.io/example-name: service-connection
+  name: service-connection
 spec:
   forProvider:
     addressType: INTERNAL
@@ -22,21 +33,18 @@ spec:
     prefixLength: 16
     networkSelector:
       matchLabels:
-        testing.upbound.io/example-name: example
+        testing.upbound.io/example-name: service-connection
 
 ---
 
-apiVersion: servicenetworking.gcp.upbound.io/v1beta1
-kind: Connection
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
 metadata:
+  annotations:
+    meta.upbound.io/example-id: servicenetworking/v1beta1/connection
   labels:
-    testing.upbound.io/example-name: example
-  name: example
+    testing.upbound.io/example-name: service-connection
+  name: service-connection
 spec:
   forProvider:
-    networkSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
-    reservedPeeringRangesRefs:
-    - name: example-servicenetworking
-    service: servicenetworking.googleapis.com
+    autoCreateSubnetworks: false
